[package]
name = "tibrv"
version = "0.2.0"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["tibrv", "rendezvous", "messaging"]
repository = "https://github.com/bradfier/tibrv-rs"
homepage = "https://github.com/bradfier/tibrv-rs"
documentation = "https://bradfier.github.io/tibrv-rs/"
description = """
Bindings to the C library provided by TIBCO Rendezvous, a "high performance
message oriented middleware" commonly used in the financial industry.
"""
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "bradfier/tibrv-rs" }

[dependencies]
chrono = "0.4"
failure = "^0.1"
failure_derive = "^0.1"
tibrv-sys = { version = "0.2", path = "tibrv-sys" }
tokio = { version = "^0.1.3", optional = true }
mio = { version = "0.6.14", optional = true }
futures = { version = "0.1.18", optional = true }

[features]
async = ["tokio", "futures", "mio"]
