[package]
name = "tibrv-sys"
version = "0.3.0"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
links = "tibrv"
build = "build.rs"
repository = "https://github.com/bradfier/tibrv-rs"
license = "MIT/Apache-2.0"
description = "Native bindings to the TIBCO Rendezvous C library."

[lib]
name = "tibrv_sys"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"

[build-dependencies]
bindgen = "0.30"

[features]
tibrv_8_1 = ["gte_tibrv_8_1"]
tibrv_8_2 = ["gte_tibrv_8_1", "gte_tibrv_8_2"]
tibrv_8_3 = ["gte_tibrv_8_1", "gte_tibrv_8_2", "gte_tibrv_8_3"]

gte_tibrv_8_1 = []
gte_tibrv_8_2 = []
gte_tibrv_8_3 = []
